--- a/src/App.scss
+++ b/src/App.scss
@@ -4,10 +4,9 @@ body {
     font-family: 'Roboto Standard', Arial, Helvetica, sans-serif;
 }
 
-.link, .link:visited {
+.link, .link:visited, a {
     text-decoration: none;
     color: black;
-    font-family: "Roboto Bold", Arial, Helvetica, sans-serif;
 }
 
 .nav-link {
