--- a/src/components/common/Content/TextComponents/TextComponents.scss
+++ b/src/components/common/Content/TextComponents/TextComponents.scss
@@ -1,11 +1,21 @@
 .title {
-  font-size: 42px;
+  font-size: 24px;
   font-family: var(--font-family-bold);
   font-style: italic;
-  margin-bottom: 25px;
+  margin: 0;
 }
 
 .subtitle {
-  font-size: 18px;
+  font-size: 14px;
   font-family: var(--font-family-bold);
+}
+
+@media screen and (min-width: 1280px) {
+  .title {
+    font-size: 42px;
+  }
+
+  .subtitle {
+    font-size: 18px;
+  }
 }
