--- a/src/components/common/Content/UspBanner/UspBanner.scss
+++ b/src/components/common/Content/UspBanner/UspBanner.scss
@@ -1,50 +1,54 @@
 .usp__container {
-  padding: 20px 10rem;
-  opacity: 0;
-  transform: scale(0.75);
-  transition: 1s;
+  display: none;
 }
 
-.usp-container {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-  height: 450px;
+@media screen and (min-width: 1280px) {
+  .usp__container {
+    padding: 20px 10rem;
+    opacity: 0;
+    transform: scale(0.75);
+    transition: 1s;
+  }
+
+  .usp-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    height: 450px;
+  }
+
+  .usp-container-flipped {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .usp__container--zoom {
+    opacity: 1;
+    transform: scale(1);
+    transition: 1s;
+  }
+
+  .usp__content-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 75%;
+    height: 350px;
+  }
+
+  .usp__image-container {
+    display: flex;
+  }
+
+  .usp__image {
+    max-height: 300px;
+    width: auto;
+    box-shadow: 10px 10px 5px var(--color-accent);
+    border-radius: 15%;
+  }
+
+  .usp__text {
+    width: 25%;
+    line-height: 1.5rem;
+  }
 }
-
-.usp-container-flipped {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.usp__container--zoom {
-  opacity: 1;
-  transform: scale(1);
-  transition: 1s;
-}
-
-.usp__content-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 75%;
-  height: 350px;
-}
-
-.usp__image-container {
-  display: flex;
-}
-
-.usp__image {
-  max-height: 300px;
-  width: auto;
-  box-shadow: 10px 10px 5px var(--color-accent);
-  border-radius: 15%;
-}
-
-.usp__text {
-  width: 25%;
-  line-height: 1.5rem;
-}
-
-
