--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -1,21 +1,5 @@
 .signup-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  max-width: 1264px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 500px;
-  padding-bottom: 150px;
-}
-
-.signup-text {
-  font-size: 42px;
-  font-family: var(--font-family-bold);
-  font-style: italic;
-  margin: 5px 0 10px 0;
-  display: flex;
-  justify-content: center;
+  margin-top: 25px;
 }
 
 .signup-message-container {
@@ -30,19 +14,25 @@
   justify-content: center;
 }
 
-.informations-container {
-  margin-left: auto;
-  margin-right: auto;
+.info-section {
+  text-align: center;
 }
 
-.terms-information-container,
-.already-customer-container {
-  margin-left: auto;
-  margin-right: auto;
+.info-section a {
+  font-family: var(--font-family-bold);
 }
 
-.terms-information-container {
-  margin-top: 25px;
-  font-size: 12px;
-  font-style: italic;
+@media screen and (min-width: 1280px) {
+  .signup-container {
+    padding-bottom: 150px;
+  }
+
+  .signup-text {
+    font-size: 42px;
+    font-family: var(--font-family-bold);
+    font-style: italic;
+    margin: 5px 0 10px 0;
+    display: flex;
+    justify-content: center;
+  }
 }
