PLP styling and minor bug fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import "../src/assets/fonts/fonts.css";
 
+#root {
+  overflow: hidden;
+}
+
 body {
     font-family: 'Roboto Standard', Arial, Helvetica, sans-serif;
 }
