Fix minor styling issues on desktop

--- a/src/components/common/Content/CategoryBanner/CategoryBanner.scss
+++ b/src/components/common/Content/CategoryBanner/CategoryBanner.scss
@@ -66,6 +66,7 @@
 
   .category-item.category-item.category-item-right {
     background-image: url(../../../../assets/images/categoryImages/womens-fashion.jpg);
+    margin: 0;
   }
 
   .category-item.category-item-left:hover {
