--- a/src/components/common/Catalog/ProductDetail/ProductDetail.scss
+++ b/src/components/common/Catalog/ProductDetail/ProductDetail.scss
@@ -3,11 +3,17 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 25px;
+  margin: 25px;
+}
+
+.product-image-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
 }
 
 .product-image {
-  max-height: auto;
   max-height: 300px;
 }
 
@@ -16,13 +22,13 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
   width: 75%;
 }
 
 .product-detail-title {
   font-family: var(--font-family-bold);
-  padding-bottom: 10px;
+  padding: 10px;
+  text-align: center;
 }
 
 .bottom-detail-container {
@@ -44,26 +50,31 @@
 @media screen and (min-width: 1280px) {
   .product-detail-container {
     display: flex;
-    margin: 100px 0;
-    height: 500px;
+    margin: 25px auto;
+    height: auto;
     flex-direction: inherit;
+    width: 50%;
   }
 
   .product-image-container {
-    display: flex;
     justify-content: flex-start;
-    padding-left: 25%;
   }
 
   .product-image {
     width: auto;
-    max-height: auto;
+    max-height: 450px;
+  }
+
+  .add-to-cart-container {
+    position: relative;
+    width: 100%;
+    padding: 0;
+    margin-top: 25px;
   }
 
   .product-details {
     position: relative;
     padding-left: 35px;
-    margin-right: 25%;
   }
 
   .product-detail-title {
