--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,84 +1,160 @@
 .cart-container {
-  min-height: 50vh;
+  min-height: 350px;
 }
 
 .cart-title {
-  display: flex;
-  justify-content: center;
-}
-
-.cart-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 30px 0;
-}
-
-.cart-action-buttons > span {
-  margin-left: 5px;
+  text-align: center;
+  padding: 15px 0;
 }
 
 .cart-item-table {
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-table {
   border-collapse: collapse;
-  border-spacing: 0;
-  max-width: 100%;
 }
 
-.cart-item-table > thead {
-  font-family: var(--font-family-bold);
+.cart-header {
+  padding: 10px;
 }
 
-.table {
-  text-align: right;
-  padding: 25px;
+.cart-action-buttons {
+  display: flex;
+  justify-content: space-between;
 }
 
-.table.price {
-  padding-right: 30px;
+.cart-image {
+  width: 25%;
+  height: auto;
+}
+
+.cart-item-table thead {
+  display: none;
 }
 
 .table.item {
   text-align: left;
 }
 
+.item-info {
+  max-width: 100%;
+  position: relative;
+  height: 150px;
+}
+
+.item-info td {
+  border-bottom: 1px solid black;
+}
+
 .cart-product-info {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
 
-.cart-product-info > span {
-  padding-left: 25px;
+.cart-product-info span {
+  width: 100%;
 }
 
-.cart-link {
-  color: var(--color-dimmed-primary);
-  text-decoration: none;
+.table.qty {
+  position: absolute;
+  bottom: 15px;
+  right: 0;
+  border-bottom: none;
 }
 
-.item-info > td {
-  padding: 15px;
-  border-bottom: 1px solid var(--color-accent);
+.item-qty {
+  margin: 0;
 }
 
-.cart-image {
-  width: 110px;
-  height: 160px;
-}
+@media screen and (min-width: 1280px) {
+  .cart-container {
+    min-height: 50vh;
+  }
 
-.cart-footer {
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  align-items: center;
+  .cart-title {
+    display: flex;
+    justify-content: center;
+  }
+
+  .cart-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    width: 60%;
+  }
+
+  .cart-action-buttons > span {
+    margin-left: 5px;
+  }
+
+  .cart-item-table {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    max-width: 100%;
+  }
+
+  .cart-item-table > thead {
+    font-family: var(--font-family-bold);
+  }
+
+  .table {
+    text-align: right;
+    padding: 25px;
+  }
+
+  .table.price {
+    padding-right: 30px;
+  }
+
+  .table.item {
+    text-align: left;
+  }
+
+  .table.qty {
+    position: relative;
+    border-bottom: 1px solid var(--color-accent);
+    bottom: inherit;
+    top: inherit;
+  }
+
+  .cart-product-info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .cart-product-info > span {
+    padding-left: 25px;
+  }
+
+  .cart-link {
+    color: var(--color-dimmed-primary);
+    text-decoration: none;
+  }
+
+  .item-info > td {
+    padding: 15px;
+    border-bottom: 1px solid var(--color-accent);
+  }
+
+  .cart-image {
+    width: 110px;
+    height: 160px;
+  }
+
+  .cart-footer {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+  }
 }
