--- a/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
+++ b/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
@@ -25,6 +25,10 @@
   border-bottom: 1px solid var(--color-primary);
 }
 
+.right-header-section {
+  display: none;
+}
+
 @media screen and (min-width: 1280px) {
   .main-header-logo {
     font-size: 32px;
