--- a/src/components/common/Modal/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal/Modal.scss
@@ -1,20 +1,23 @@
 .modal-background {
-  width: 100vw;
-  height: 50vh;
+  width: 90vw;
   position: absolute;
-  left: 40%;
-  top: 25%;
+  top: 0;
+  left: 20px;
+  z-index: 200;
+  height: 20vh;
 }
 
 .modal-container {
-  width: 300px;
-  height: 300px;
+  height: 100%;
   border-radius: 12px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: var(--color-secondary);
+  box-shadow: var(--color-dimmed-primary) 0px 5px 15px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 25px;
+  z-index: 150;
 }
 
 .modal-body {
@@ -22,8 +25,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  height: 75%;
-  width: 100%;
   font-family: var(--font-family-bold);
 }
 
@@ -31,4 +32,41 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 1280px) {
+  .modal-background {
+    width: 100vw;
+    height: 50vh;
+    position: absolute;
+    left: 40%;
+    top: 25%;
+  }
+
+  .modal-container {
+    width: 300px;
+    height: 300px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+  }
+
+  .modal-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 75%;
+    width: 100%;
+    font-family: var(--font-family-bold);
+  }
+
+  .modal-footer {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
