--- a/src/pages/MyAccountPage/MyAccountPage.scss
+++ b/src/pages/MyAccountPage/MyAccountPage.scss
@@ -1,24 +1,28 @@
-.my-account-container {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  margin: 50px 10px 30px;
-}
 
-.accordion-container {
-  max-width: 650px;
-  height: 650px;
-}
 
-.my-account-accordion {
-  width: 600px;
-}
+@media screen and (min-width: 1280px) {
+  .my-account-container {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    margin: 50px 10px 30px;
+  }
 
-.account-title {
-  width: 100%;
-  height: 25px;
-}
+  .accordion-container {
+    max-width: 650px;
+    height: 650px;
+  }
 
-.personal-information-container {
-  margin-left: 50px;
+  .my-account-accordion {
+    width: 600px;
+  }
+
+  .account-title {
+    width: 100%;
+    height: 25px;
+  }
+
+  .personal-information-container {
+    margin-left: 50px;
+  }
 }
