--- a/src/components/Form/Forms/FormComponents/MyAccountForm/MyAccountForm.scss
+++ b/src/components/Form/Forms/FormComponents/MyAccountForm/MyAccountForm.scss
@@ -1,16 +1,23 @@
-.change-credentials-container {
-  padding: 5px 20px 15px 20px;
-}
-
 .my-account-form > fieldset {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding: 10px 0;
 }
 
-.change-credentials-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 10px 20px;
+.my-account-item-title {
+  text-align: center;
+}
+
+@media screen and (min-width: 1280px) {
+  .change-credentials-container {
+    padding: 5px 20px 15px 20px;
+  }
+
+  .change-credentials-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 10px 20px;
+  }
 }
