--- a/src/components/common/Catalog/CatalogFilter/CatalogFilter.scss
+++ b/src/components/common/Catalog/CatalogFilter/CatalogFilter.scss
@@ -1,21 +1,22 @@
 .page-sorter {
   display: flex;
-  justify-content: flex-end;
-  margin-right: 25px;
+  justify-content: center;
+  width: 100%;
 }
 
 .sorter-select {
-  width: auto;
-  height: 20px;
+  width: 90%;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  height: 45px;
   text-align: center;
 }
 
 @media screen and (min-width: 1280px) {
   .page-sorter {
     width: 80%;
+    justify-content: flex-end;
   }
 
   .sorter-select {
