--- a/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
+++ b/src/components/common/Header/HeaderComponents/Navigation/Navigation.scss
@@ -18,6 +18,7 @@
 .main-header-logo {
   font-family: var(--font-family-bold);
   font-size: 18px;
+  text-align: center;
 }
 
 .section-item-active {
