--- a/src/components/common/MyAccount/Accordion/Accordion.scss
+++ b/src/components/common/MyAccount/Accordion/Accordion.scss
@@ -1,5 +1,11 @@
+.accordion-container {
+  max-width: 100vw;
+  margin: 10px;
+  min-height: 40vh;
+}
+
 .accordion-item {
-  padding-left: 30px;
+  padding: 0;
   margin-top: 40px;
 }
 
@@ -14,4 +20,8 @@
 
 .accordion-icon {
   font-size: 24px;
+}
+
+@media screen and (min-width: 1280px) {
+
 }
