--- a/src/components/common/MyAccount/AccountMenu/AccountMenu.scss
+++ b/src/components/common/MyAccount/AccountMenu/AccountMenu.scss
@@ -1,29 +1,37 @@
 .my-account-menu-container {
-  flex: 100%;
-  max-width: 255px;
-  padding-right: 50px;
+  display: none;
 }
 
-.my-account-menu {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  color: var(--color-accent);
-}
+@media screen and (min-width: 1280px) {
+  .my-account-menu-container {
+    flex: 1;
+    max-width: 255px;
+    padding-right: 50px;
+    display: flex;
+    flex-direction: column;
+  }
 
-.my-account-menu-title {
-  color: var(--color-accent);
-}
+  .my-account-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    color: var(--color-accent);
+  }
 
-.my-account-menu-item {
-  font-family: var(--font-family-italic);
-  border-bottom: 1px solid var(--color-accent);
-  text-decoration: none;
-  list-style: none;
-  width: 100%;
-  height: 25px;
-  margin-top: 15px;
-  color: inherit;
+  .my-account-menu-title {
+    color: var(--color-accent);
+  }
+
+  .my-account-menu-item {
+    font-family: var(--font-family-italic);
+    border-bottom: 1px solid var(--color-accent);
+    text-decoration: none;
+    list-style: none;
+    width: 100%;
+    height: 25px;
+    margin-top: 15px;
+    color: inherit;
+  }
 }
