--- a/src/components/common/Content/UspBanner/UspBanner.scss
+++ b/src/components/common/Content/UspBanner/UspBanner.scss
@@ -1,6 +1,45 @@
-.main-content-container {
-  display: none;
+.usp-container .usp__container--zoom {
+  padding: 10px;
 }
+
+.usp-container {
+  padding: 10px;
+  transition: 1s;
+}
+
+.usp__content-container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.usp__image {
+  width: 100%;
+  height: auto;
+  border-radius: 15%;
+}
+
+.usp__text {
+  text-align: center;
+}
+
+.usp-container .usp-container-flipped .usp__content-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.usp__image-container {
+  box-shadow: 10px 10px 5px var(--color-accent);
+  border-radius: 15%;
+}
+
+.usp__container--zoom {
+  opacity: 1;
+  transform: scale(1);
+  transition: 1s;
+}
+
 
 @media screen and (min-width: 1280px) {
 
@@ -12,8 +51,6 @@
     display: flex;
     padding: 20px 10rem;
     opacity: 0;
-    transform: scale(0.75);
-    transition: 1s;
   }
 
   .usp-container {
@@ -21,6 +58,7 @@
     justify-content: flex-start;
     width: 100%;
     height: 450px;
+    padding: 0;
   }
 
   .usp-container-flipped {
@@ -28,14 +66,9 @@
     justify-content: flex-end;
   }
 
-  .usp__container--zoom {
-    opacity: 1;
-    transform: scale(1);
-    transition: 1s;
-  }
-
   .usp__content-container {
     display: flex;
+    flex-direction: inherit;
     justify-content: space-around;
     align-items: center;
     width: 75%;
@@ -47,10 +80,8 @@
   }
 
   .usp__image {
-    max-height: 300px;
+    height: 20rem;
     width: auto;
-    box-shadow: 10px 10px 5px var(--color-accent);
-    border-radius: 15%;
   }
 
   .usp__text {
