--- a/src/pages/AboutUs/AboutUs.scss
+++ b/src/pages/AboutUs/AboutUs.scss
@@ -1,7 +1,23 @@
 .about-us-container {
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.subtitle {
+  font-size: 16px;
   text-align: center;
-  padding-bottom: 50px;
+  padding: 0 10px;
+}
+
+@media screen and (min-width: 1280px) {
+  .about-us-container {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-bottom: 50px;
+  }
 }
