--- a/src/pages/ForgotPassword/ForgotPasswordPage/ForgotPasswordPage.scss
+++ b/src/pages/ForgotPassword/ForgotPasswordPage/ForgotPasswordPage.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 500px;
-  padding-bottom: 150px;
+  padding: 25px 0;
 }
 
 .container-image {
@@ -22,4 +21,11 @@
   width: 300px;
   padding-left: 20px;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 1280px) {
+  .forgotten-password-container {
+    height: 500px;
+    padding-bottom: 150px;
+  }
 }
