--- a/src/components/common/Header/Minicart/MinicartMenu/MinicartMenu.scss
+++ b/src/components/common/Header/Minicart/MinicartMenu/MinicartMenu.scss
@@ -1,4 +1,9 @@
 .menu-container-cart {
+  display: none;
+}
+
+@media screen and (min-width: 1280px) {
+.menu-container-cart {
   font-size: 22px;
   position: absolute;
   right: 20px;
@@ -26,6 +31,7 @@
   z-index: 10;
   padding: 5px;
   max-height: 450px;
+}
 }
 
 
