--- a/src/components/Form/Forms/FormComponents/MyAccountForm/MyAccountForm.scss
+++ b/src/components/Form/Forms/FormComponents/MyAccountForm/MyAccountForm.scss
@@ -1,7 +1,10 @@
+.change-credentials-form {
+  width: 100%;
+}
+
 .my-account-form > fieldset {
   display: flex;
   justify-content: center;
-  width: 100%;
   padding: 10px 0;
 }
 
