Protect checkout routes for users without cart

--- a/src/components/common/Checkout/CheckoutForm/CheckoutForm.scss
+++ b/src/components/common/Checkout/CheckoutForm/CheckoutForm.scss
@@ -1,13 +1,52 @@
 .checkout-form-container {
-    padding: 10px;
+  padding: 10px;
 }
 
 .checkout-form-container .subtitle {
-    margin: 2px;
-    padding: 5px 12px;
-    text-align: start;
+  margin: 2px;
+  padding: 5px 12px;
+  text-align: start;
 }
 
 .side-by-side {
+  display: flex;
+}
+
+.inputs-container .button-container {
+  display: none;
+}
+
+.checkout-cart-button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+@media screen and (min-width: 1280px) {
+  .checkout-form-container {
     display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .information-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+  }
+
+  .inputs-container {
+    width: 50%;
+  }
+
+  .checkout-cart-button {
+    display: flex;
+    justify-content: center;
+    padding: 6px 12px 10px;
+    padding-left: 25px;
+    width: 50%;
+  }
 }
