--- a/src/components/common/Checkout/CheckoutSummary/CheckoutSummary.scss
+++ b/src/components/common/Checkout/CheckoutSummary/CheckoutSummary.scss
@@ -9,7 +9,7 @@
   padding-left: 25px;
 }
 
-.customer-data-container, .shipping-summary-container {
+.customer-data-container {
   display: flex;
   flex-direction: column;
   line-height: 1.5rem;
