--- a/src/pages/Checkout/Successpage/SuccesPage.scss
+++ b/src/pages/Checkout/Successpage/SuccesPage.scss
@@ -19,3 +19,10 @@
   padding-top: 15px;
   font-family: var(--font-family-italic);
 }
+
+@media screen and (min-width: 1280px) {
+  .checkout-success-image {
+    height: 35vh;
+    width: auto;
+  }
+}
