--- a/src/pages/Checkout/CheckoutPages.scss
+++ b/src/pages/Checkout/CheckoutPages.scss
@@ -13,9 +13,15 @@
   padding-bottom: 10px;
 }
 
+.confirm-checkout-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
 @media screen and (min-width: 1280px) {
-  .checkout-container .checkout-button {
-    display: initial;
-    padding-bottom: 0;
+  .checkout-container {
+    display: flex;
+    justify-content: center;
   }
 }
