Update the readme file

--- a/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
+++ b/src/components/common/Content/FullWidthBanner/FullWidthBanner.scss
@@ -27,6 +27,11 @@
   padding-left: 15px;
 }
 
+.text-container .subtitle {
+  text-align: start;
+  padding: 0;
+}
+
 .buttons-container {
   position: absolute;
   bottom: 0px;
