Add reauthentication on email change

--- a/src/components/common/Modal/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal/Modal.scss
@@ -35,6 +35,10 @@
   margin-right: auto;
 }
 
+.reauthentication-modal {
+  text-align: center;
+}
+
 @media screen and (min-width: 1280px) {
   .modal-background {
     width: 100vw;
