--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,13 @@ a {
   margin-top: 5px;
 }
 
+.succes-message {
+  color: green;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+}
+
 @keyframes loader-spin {
   0% {
     transform: rotate(0deg);
