--- a/src/components/Form/Buttons/PrimaryButton/PrimaryButton.scss
+++ b/src/components/Form/Buttons/PrimaryButton/PrimaryButton.scss
@@ -1,4 +1,4 @@
-.functional-button {
+.primary-button {
   height: 50px;
   width: 220px;
   font-size: 18px;
@@ -9,7 +9,7 @@
   border-radius: 10px;
 }
 
-.functional-button:disabled {
+.primary-button:disabled {
   background: var(--color-disabled-button);
   cursor: auto;
 }
