--- a/src/components/Form/Buttons/SecondaryButton/SecondaryButton.scss
+++ b/src/components/Form/Buttons/SecondaryButton/SecondaryButton.scss
@@ -1,4 +1,4 @@
-.user-control-button {
+.secondary-button {
   height: 47px;
   width: 112.25px;
   background-color: var(--color-secondary);
@@ -9,7 +9,7 @@
   cursor: pointer;
 }
 
-.user-control-button-signup {
+.secondary-button-flipped {
   height: 47px;
   width: 112.25px;
   background-color: var(--color-primary);
@@ -18,15 +18,4 @@
   border-radius: 10px;
   font-family: var(--font-family-bold);
   cursor: pointer;
-}
-
-.submit-login-button {
-  height: 50px;
-  width: 220px;
-  font-size: 18px;
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-  border: none;
-  cursor: pointer;
-  margin-left: 5px;
 }
