Revert "Add reauthentication to change of information"
This reverts commit 6241ca02f589ef292500b9003cbb15b346027ba5.

--- a/src/components/Form/Buttons/FunctionalButton/FunctionalButton.scss
+++ b/src/components/Form/Buttons/FunctionalButton/FunctionalButton.scss
@@ -1,4 +1,4 @@
-.primary-button {
+.functional-button {
   height: 50px;
   width: 220px;
   font-size: 18px;
@@ -9,7 +9,7 @@
   border-radius: 10px;
 }
 
-.primary-button:disabled {
+.functional-button:disabled {
   background: var(--color-disabled-button);
   cursor: auto;
 }
