--- a/src/components/common/Modal/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal/Modal.scss
@@ -8,6 +8,7 @@
 }
 
 .modal-container {
+  height: 100%;
   border-radius: 12px;
   background-color: var(--color-secondary);
   box-shadow: var(--color-dimmed-primary) 0px 5px 15px;
@@ -36,12 +37,6 @@
 
 .reauthentication-modal {
   text-align: center;
-}
-
-.modal-button-container {
-  display: flex;
-  justify-content: center;
-  padding-top: 35px;
 }
 
 @media screen and (min-width: 1280px) {
