--- a/src/components/common/Header/HeaderComponents/Searchbar/Searchbar.scss
+++ b/src/components/common/Header/HeaderComponents/Searchbar/Searchbar.scss
@@ -18,6 +18,15 @@
   width: 100%;
 }
 
+.searchbar-container.active {
+  height: 50vh;
+  width: 100%;
+  background-color: white;
+  z-index: 5;
+  position: absolute;
+  overflow: auto;
+}
+
 .searchbar {
   position: absolute;
   display: none;
@@ -35,4 +44,19 @@
   position: absolute;
   width: 90%;
   text-align: center;
+}
+
+.searchbar-item-container {
+  display: flex;
+  position: relative;
+  top: 50px;
+  flex-direction: column;
+  width: 90%;
+  align-items: center;
+}
+
+.search-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
 }
