--- a/src/components/common/Header/HeaderComponents/Searchbar/Searchbar.scss
+++ b/src/components/common/Header/HeaderComponents/Searchbar/Searchbar.scss
@@ -11,20 +11,13 @@
 }
 
 .searchbar-container {
-  display: flex;
-  justify-content: center;
   position: absolute;
   top: 60px;
+  left: 0;
   width: 100%;
-}
-
-.searchbar-container.active {
-  height: 50vh;
-  width: 100%;
-  background-color: white;
+  background-color: var(--color-secondary);
   z-index: 5;
-  position: absolute;
-  overflow: auto;
+  height: 100vh;
 }
 
 .searchbar {
@@ -44,19 +37,73 @@
   position: absolute;
   width: 90%;
   text-align: center;
+  border: 1px solid var(--color-accent);
 }
 
 .searchbar-item-container {
+  z-index: 10;
   display: flex;
   position: relative;
   top: 50px;
   flex-direction: column;
-  width: 90%;
+  height: auto;
+  overflow: auto;
   align-items: center;
+  background-color: var(--color-secondary);
+}
+
+.search-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-accent);
+  padding: 10px;
+  width: 80vw;
 }
 
 .search-image {
   width: 50px;
   height: 50px;
   border-radius: 25px;
+  object-fit: cover;
+}
+
+.search-item-name {
+  width: 50%;
+}
+
+@media screen and (min-width: 1280px) {
+  .menu-container-search {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: auto;
+    right: 40px;
+  }
+
+  .searchbar-container {
+    height: inherit;
+    width: 25%;
+    right: 275px;
+    left: inherit;
+    top: 25px;
+  }
+
+  .search-item {
+    display: flex;
+    justify-content: space-between;
+    width: 350px;
+  }
+
+  .search-image-container {
+    height: 50px;
+    width: 50px;
+  }
+
+  .searchbar-item-container {
+    max-height: 75vh;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
 }
