--- a/src/components/common/Header/HeaderComponents/SignedInMenu/SignedInMenu.scss
+++ b/src/components/common/Header/HeaderComponents/SignedInMenu/SignedInMenu.scss
@@ -3,7 +3,8 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .menu-container-user, .menu-container-cart {
+  .menu-container-user,
+  .menu-container-cart {
     display: flex;
     justify-content: center;
     position: relative;
@@ -60,14 +61,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 4px 6px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
     border: none;
     vertical-align: middle;
-    transition: box-shadow 0.4s ease;
-  }
-
-  .menu-trigger:hover {
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
   }
 
   .menu-trigger span {
