Cleanup code and styling fixes

--- a/src/pages/Wishlist/Wishlist.scss
+++ b/src/pages/Wishlist/Wishlist.scss
@@ -12,3 +12,9 @@
 .wishlist-content {
   min-height: 25vh;
 }
+
+@media screen and (min-width: 1280px) {
+  .wishlist-content {
+    min-height: 500px;
+  }
+}
