--- a/src/components/common/Catalog/ProductCards/ProductCards.scss
+++ b/src/components/common/Catalog/ProductCards/ProductCards.scss
@@ -70,17 +70,19 @@
     width: 60%;
     margin-left: auto;
     margin-right: auto;
+    justify-content: inherit;
   }
 
   .product-item-container {
     position: relative;
-    height: 570px;
+    height: auto;
+    margin: 25px;
   }
 
   .product-link {
     display: flex;
     justify-content: center;
-    width: 50%;
+    width: 33.3333%;
     margin: 0;
   }
 
@@ -88,19 +90,9 @@
     margin-bottom: 5px;
   }
 
-  .product-item-image-container {
-    display: flex;
-    justify-content: center;
-  }
-
   .product-item-image {
     object-fit: contain;
-    height: 70%;
-    width: 70%;
-  }
-
-  .product-info {
-    position: absolute;
-    bottom: 100px;
+    width: 275px;
+    height: 250px;
   }
 }
