--- a/src/components/common/Catalog/ProductDetail/ProductDetail.scss
+++ b/src/components/common/Catalog/ProductDetail/ProductDetail.scss
@@ -11,10 +11,13 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
+  height: 300px;
 }
 
 .product-image {
-  max-height: 300px;
+  height: 200px;
+  width: auto;
+  object-fit: contain;
 }
 
 .product-details {
@@ -65,6 +68,7 @@
     flex-direction: inherit;
     width: 50%;
     position: relative;
+    height: 500px;
   }
 
   .product-image-container {
@@ -72,8 +76,9 @@
   }
 
   .product-image {
-    width: auto;
-    max-height: 450px;
+    width: 250px;
+    height: 450px;
+    object-fit: contain;
   }
 
   .product-details {
