--- a/src/components/common/Header/HeaderComponents/Minicart/MinicartItems/MinicartItems.scss
+++ b/src/components/common/Header/HeaderComponents/Minicart/MinicartItems/MinicartItems.scss
@@ -8,7 +8,8 @@
   font-size: 16px;
 }
 
-.minicart-link, .minicart-header {
+.minicart-link,
+.minicart-header {
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -45,9 +46,10 @@
 
 .minicart-product-image {
   width: 50px;
-  height: 95px;
+  height: 70px;
   margin: 5px;
   padding-bottom: 5px;
+  object-fit: contain;
 }
 
 .minicart-info {
