--- a/src/components/form/Buttons/PrimaryButton/PrimaryButton.scss
+++ b/src/components/form/Buttons/PrimaryButton/PrimaryButton.scss
@@ -1,6 +1,21 @@
-.add-to-cart-button {
+.primary-button {
+  height: 50px;
+  width: 220px;
+  font-size: 18px;
   background-color: var(--color-primary);
   color: var(--color-secondary);
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.primary-button:disabled {
+  background: var(--color-disabled-button);
+  cursor: auto;
+}
+
+// Styling for the add to cart button
+.primary-button, .add_to_cart {
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -14,12 +29,11 @@
 }
 
 .add-to-cart-message {
-  padding-left: 25px;
   font-family: var(--font-family-bold);
 }
 
 @media screen and (min-width: 1280px) {
-  .add-to-cart-button {
+  .primary-button, .add_to_cart {
     height: 50px;
     width: 50%;
   }
