--- a/src/components/common/Catalog/CatalogFilter/CatalogFilter.scss
+++ b/src/components/common/Catalog/CatalogFilter/CatalogFilter.scss
@@ -11,6 +11,7 @@
   appearance: none;
   height: 45px;
   text-align: center;
+  background-color: var(--color-secondary);
 }
 
 @media screen and (min-width: 1280px) {
