--- a/src/components/common/Header/HeaderComponents/BurgerMenu/BurgerMenu.scss
+++ b/src/components/common/Header/HeaderComponents/BurgerMenu/BurgerMenu.scss
@@ -70,7 +70,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #ffffff;
+  background-color: var(--color-secondary);
   color: black;
   outline: none;
 }
@@ -89,11 +89,12 @@
   align-items: center;
 }
 
-span {
+.menu-trigger span {
   margin-right: 10px;
 }
 
-.menu-action-logout, .menu-about-us {
+.menu-action-logout,
+.menu-about-us {
   display: flex;
   justify-content: center;
   margin-top: 50px;
@@ -107,7 +108,6 @@ span {
   font-size: 14px;
   margin-top: 10px;
 }
-
 
 @media only screen and (min-width: 1201px) {
   .menu-bars {
